k8s_kubernetes_configs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd
  labels:
    purpose: nodejs-cicd
