k8s_kubernetes_configs/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: cicd
spec:
  selector:
    app: nodejs-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
